update chef photo fix alignment problem

--- a/Oaxaca/staff.css
+++ b/Oaxaca/staff.css
@@ -36,8 +36,8 @@ body {
   margin-bottom: 10px;
   opacity: 0.5;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50;
+  left: 50;
 }
 
 .waiter-button {
@@ -50,6 +50,7 @@ body {
   margin-bottom: 10px;
   opacity: 0.5;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50;
+  left: 50;
+  align-content: center;
 }
